--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,8 +83,11 @@
   margin: 0;
 }
 
-html,
+html {
+  overflow-y: scroll;
+}
 body {
+  /* padding-right: calc(100vw - 100%); */
   max-width: 100vw;
   overflow-x: hidden;
 }
